# Poly2Tri_CGAL

./: CMakeLists.txt  LICENSE  README.md
inc/: cdt.h  export.h
inc/cgal/: README.md
src/: cdt.cpp
